<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_white"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/size_20"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size_20"
            android:orientation="vertical">

            <ImageView
                android:layout_width="171dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_30"
                android:background="@drawable/cbimage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20"
                android:layout_marginBottom="@dimen/size_20"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_23"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="left"
                android:text="@string/email"
                android:textColor="#B7B7B7"
                android:textSize="@dimen/size_12"
                tools:ignore="SpUsage" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtUserName"
                    style="@style/fontStyleApp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="@dimen/size_5"
                    android:hint="@string/user_name"
                    android:paddingLeft="@dimen/size_10"
                    android:singleLine="true"
                    android:textSize="@dimen/size_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="left"
                android:text="@string/password_title"
                android:textColor="#B7B7B7"
                android:textSize="@dimen/size_12" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/fontStyleApp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="@dimen/size_5"
                    android:hint="@string/password"
                    android:paddingLeft="@dimen/size_10"
                    android:password="true"
                    android:singleLine="true"
                    android:textSize="@dimen/size_16" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/rememberme"
                style="@style/fontStyleApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_30"
                android:layout_marginBottom="@dimen/size_30"
                android:checked="true"
                android:clickable="false"
                android:fontFamily="sans-serif"
                android:gravity="right|center"
                android:text="@string/remember"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_14"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/size_20"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_login"
                    style="@style/fontStyleApp"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/size_20"
                    android:background="@drawable/button_background_rounded"
                    android:text="@string/sign_in"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/size_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_20"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="#707070"
                    android:textSize="@dimen/size_14" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>
