<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/size_20"
    android:background="@color/color_white"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/size_20"
            android:orientation="vertical">

            <ImageView
                android:layout_width="171dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@drawable/cbimage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:paddingBottom="@dimen/size_30"
                android:paddingTop="@dimen/size_30"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/detail_title"
                android:textColor="@color/text_color"
                android:textSize="@dimen/size_23"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="left"
                android:text="@string/edtText1"
                android:textColor="#707070"
                android:textSize="@dimen/size_16"
                tools:ignore="SpUsage" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/fontStyleApp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/size_5"
                    android:hint="@string/edtText2"
                    android:paddingLeft="@dimen/size_10"
                    android:singleLine="true"
                    android:textColor="#B7B7B7"
                    android:textSize="@dimen/size_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="left"
                android:text="휴대폰 번호"
                android:textColor="#707070"
                android:textSize="@dimen/size_16"
                tools:ignore="SpUsage" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/fontStyleApp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/size_5"
                    android:hint="+82 111 1111111"
                    android:paddingLeft="@dimen/size_10"
                    android:singleLine="true"
                    android:textColor="#B7B7B7"
                    android:textSize="@dimen/size_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="left"
                android:text="생년월일"
                android:textColor="#707070"
                android:textSize="@dimen/size_16"
                tools:ignore="SpUsage" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/fontStyleApp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/size_5"
                    android:hint=" mm - dd-yyyy"
                    android:paddingLeft="@dimen/size_10"
                    android:singleLine="true"
                    android:textColor="#B7B7B7"
                    android:textSize="@dimen/size_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="left"
                android:text="Email"
                android:textColor="#707070"
                android:textSize="@dimen/size_16"
                tools:ignore="SpUsage" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/fontStyleApp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/size_5"
                    android:hint="john.doe@alphametics.com"
                    android:paddingLeft="@dimen/size_10"
                    android:singleLine="true"
                    android:textColor="#B7B7B7"
                    android:textSize="@dimen/size_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="left"
                android:text="비밀번호"
                android:textColor="#707070"
                android:textSize="@dimen/size_16"
                tools:ignore="SpUsage" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/fontStyleApp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/size_5"
                    android:hint=". . . . . . . . ."
                    android:paddingLeft="@dimen/size_10"
                    android:singleLine="true"
                    android:textColor="#B7B7B7"
                    android:textSize="@dimen/size_14"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                android:gravity="left"
                android:text="비밀번호 확인"
                android:textColor="#707070"
                android:textSize="@dimen/size_16"
                tools:ignore="SpUsage" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/fontStyleApp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_20"
                    android:drawablePadding="@dimen/size_5"
                    android:hint=". . . . . . . . ."
                    android:paddingLeft="@dimen/size_10"
                    android:singleLine="true"
                    android:textColor="#B7B7B7"
                    android:textSize="@dimen/size_14"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_5"
                android:layout_marginBottom="@dimen/size_10"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox_blue"
                    android:checked="true"
                    android:gravity="center"
                    android:text="최소 8자 이상"
                    android:textColor="#707070"
                    android:textSize="@dimen/size_14"
                    android:textStyle="normal" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:checked="true"
                    android:gravity="center"
                    android:text="최소 하나의 대문자"
                    android:textColor="#707070"
                    android:textSize="@dimen/size_14"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_5"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/size_10">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:checked="true"
                    android:gravity="center"
                    android:text="최소 하나의 숫자"
                    android:textColor="#707070"
                    android:textSize="@dimen/size_14"
                    android:textStyle="normal" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/custom_checkbox"
                    android:checked="true"
                    android:gravity="center"
                    android:text="최소 하나의 특수문자"
                    android:textColor="#707070"
                    android:textSize="@dimen/size_14"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/size_20"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="center"
                    android:text="이용약관에 동의합니다"
                    android:textColor="#707070"
                    android:textSize="@dimen/size_14" />

                <Button
                    android:id="@+id/btn_details"
                    style="@style/fontStyleApp"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/size_20"
                    android:background="@drawable/button_background_rounded"
                    android:text="@string/sign_in1"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/size_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_20"
                    android:gravity="center"
                    android:text="@string/details_2"
                    android:textColor="#707070"
                    android:textSize="@dimen/size_14" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>
